@startuml
'https://plantuml.com/class-diagram

class HelloApplication{
    + void start()
    + {method} {static} void main()
}

class HelloController {
        {field} - my_canvas : Canvas
        {field} - gr : GraphicsContext
        - {method} void onLineClick1()
        - {method} void onRectClick1()
        - {method} void onTriugClick1()
        - {method} void on5GonClick1()

}

abstract class Shapes {
    {field} - ShapeColor : Color;
    {abstract} {method} + String toString()
    {abstract} {method} + void Draw()
    {method} + Shapes()
}

class Line{
    {field} - x1, x2 : double
    {field} - y1, y2 : double
    {method} + void Draw()
    {method} + String toString()
    {method} + void Line()
}

class Rectagle{
    {field} - length : double
    {field} - height : double
    {method} + void Draw()
    {method} + String toString()
    {method} + void Rectagle()
}

class Triug{
    {field} - x1, x2, x3 : double
    {field} - y1, y2, y3 : double
    {method} + void Draw()
    {method} + String toString()
    {method} + void Triug()
}

class _5Gon{
    {field} - CanvasHeight : double
    {field} - CanvasWidth  : double
    {field} - Radius : double
    {method} + void Draw()
    {method} + String toString()
    {method} + void _5Gon()
}

HelloApplication --|> HelloController
HelloController  --|> Shapes
Shapes <|-- _5Gon
Shapes <|-- Line
Shapes <|-- Triug
Shapes <|-- Rectagle
@enduml